2003-06-12  Anders Carlsson  <andersca@codefactory.se>

	* gtksourceview/gtksourceview.c (draw_line_markers): 
	Use gdk_draw_pixbuf.

2003-06-12  Paolo Maggi <paolo.maggi@polito.it>

	* configure.in: removed unused GLIB_REQUIRED_VERSION

	* gtksourceview-1.0.pc.in: add ibgnomeprint-2.2 and remove
	glib-2.0 gdk-2.0 from Requires.

=== gtksourceview 0.3.0 ===
	
2003-06-07  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* README
	* NEWS: Updated for new release

	* configure.in: Bumped version to 0.3.0

	* gtksourceview/gtksourceprintjob.c: Fixed translatable string,
	bug #114404

2003-06-06  Paolo Maggi  <paolo.maggi@polito.it>

	* TODO: Updated

	* docs/reference/gtksourceview-sections.txt: removed 
	gtk_source_buffer_find_bracket_match, added 
	gtk_source_iter_find_matching_bracket

	* gtksourceview/gtksourcebuffer.c: #include "gtksourceiter.h",
	rename gtk_source_buffer_find_bracket_match to 
	gtk_source_iter_find_matching_bracket

	* gtksourceview/gtksourcebuffer.h: removed 
	gtk_source_buffer_find_bracket_match

	* gtksourceview/gtksourceiter.h: added 
	gtk_source_iter_find_matching_bracket

	* gtksourceview/gtksourcestylescheme.h: added a list of 
	required styles

2003-06-04  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-06-02  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* docs/reference/gtksourceview-docs.sgml:
	* docs/reference/gtksourceview-sections.txt:
	* docs/reference/gtksourceview.types: Added entries for
	gtk_source_iter_* functions and GtkSourcePrintJob object.

	* docs/reference/tmpl/iter.sgml:
	* docs/reference/tmpl/printjob.sgml: New files.

	* gtksourceview/gtksourceprintjob.c: Disabled profile output.
	page and page_count now default to 0 instead of -1.

	* tests/test-widget.c: Save the opened filename and print it in
	the footer.  A bit nicer print progress indicator and some other
	printing configuration changed.
	
2003-06-02  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
